src/objects/Upgrades__c.object
<CustomObject>
    <description>Owner - Roopal Shah</description>
    <fields>
        <fullName>Contract_Line_Item__c</fullName>
        <description>Created as part of Track 2 - CPQ</description>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Upgrades</relationshipLabel>
        <relationshipName>Upgrades</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Upgrade_Duration__c</fullName>
        <formula>Upgrade_End_Date__c - Upgrade_Start_Date__c</formula>
        <label>Upgrade Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_End_Date__c</fullName>
        <label>Upgrade End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_From__c</fullName>
        <label>Upgrade From</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_History__c</fullName>
        <label>Upgrade History</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Upgrade_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Upgrade_Notes__c</fullName>
        <label>Upgrade Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upgrade_Start_Date__c</fullName>
        <label>Upgrade Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_To__c</fullName>
        <label>Upgrade To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Type__c</fullName>
        <label>Upgrade Type</label>
        <picklist>
            <picklistValues>
                <fullName>Minor Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Implementation Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Upgrade</label>
    <nameField>
        <displayFormat>U-{000}</displayFormat>
        <label>Upgrade Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upgrades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>